--- a/views/stores.html.twig
+++ b/views/stores.html.twig
@@ -20,20 +20,17 @@
                     </form>
                     <br>
                     <form action="/delete_all_stores" method="post">
-                        <button type="/submit" 
+                        <button type="/submit" class="btn btn-danger">Delete ALL Stores</button>
                     </form>
 
                 </div><!-- End Column1 -->
                 <div class="col-sm-6">
                     <h3>Here are the current Stores in your database:</h3>
 
-                    {% if stores is empty %}
-                    <p>There are no stores currently in your database. Use the forms on the left to add a store.</p>
-                    {% endif %}
 
                     <ul>
                     {% for store in all_stores %}
-                        <li><span class="underline-class">{{ store.getName() }}</span> - {{ store.getLocation() }}</li>
+                        <li><span class="underline-class"><a href="/store/{{ store.getId }}">{{ store.getName() }}</a></span> - {{ store.getLocation() }}</li>
                     {% endfor %}
                     </ul>
                 </div>
