--- a/views/header.html
+++ b/views/header.html
@@ -7,7 +7,7 @@
         <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <a class="navbar-brand topnav" href="#" target="_blank">Shoe-Brand Database</a>
+                <a class="navbar-brand topnav" href="#" target="_blank">Store-Brand Database</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
