create brands page twig template with functionality for adding brands

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -3,7 +3,7 @@
     {% include 'header.html' %}
     <body>
         <div class="container">
-            <h4><a href="/shoes">Access Shoes</a></h4>
+            <h4><a href="/brands">Access Brands</a></h4>
             <h4><a href="/stores">Access Stores</a></h4>
         </div>
     </body>
