add front-end working functionality for deleting all brands

--- a/views/brands.html.twig
+++ b/views/brands.html.twig
@@ -13,6 +13,10 @@
                         </div>
                         <button type="submit" class="btn btn-success">Add</button>
                     </form>
+                    <br>
+                    <form action="/delete_all_brands" method="post">
+                        <button type="submit" class="btn btn-danger">Delete ALL brands</button>
+                    </form>
                 </div><!-- END col-1 -->
 
                 <div class="col-sm-6">
