--- a/views/footer.html
+++ b/views/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a href="/">Home</a>
         <a href="/stores">Stores</a>
-        <a href="/shoes">Shoes</a>
+        <a href="/brands">Brands</a>
         <a href="#">Support</a>
     </div>
 </footer>
