--- a/views/header.html
+++ b/views/header.html
@@ -19,7 +19,7 @@
                         <a href="/stores">Stores</a>
                     </li>
                     <li>
-                        <a href="/shoes">Shoes</a>
+                        <a href="/brands">Brands</a>
                     </li>
                    <li>
                         <a href="#">Support</a>
