--- a/views/brand.html.twig
+++ b/views/brand.html.twig
@@ -3,10 +3,35 @@
     {% include 'header.html' %}
     <body>
         <div class="container">
-            <h5>Here is the current information for {{brand.getName }}:</h5>
-            <ul>
-                <li><span class="underline-class">Name</span>: {{brand.getName }}</li>
-            </ul>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h4>Here is the current information for {{brand.getName }}:</h4>
+                    <ul>
+                        <li><span class="underline-class">Name</span>: {{brand.getName }}</li>
+                    </ul>
+
+                    <h5>Add a Store to your Brand</h5>
+                    <form action="/brand_add_store" method="post">
+                        <input type="hidden" name="brand_id" value="{{ brand.getId }}">
+                        <select name="store_id">
+                            {% for store in all_stores %}
+                                <option value="{{ store.getId }}">{{ store.getName }}</option>
+                            {% endfor %}
+                        </select>
+                        <button type="submit" class="btn btn-success">Add!</button>
+                    </form>
+                </div><!-- END COLUMN 1 -->
+
+
+                <div class="col-sm-6">
+                    <h4>Here are the current Stores assocaited with your Brand:</h4>
+                    <ul>
+                        {% for store in stores %}
+                            <li>{{ store.getName }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
         </div>
 
     </body>
