--- a/views/brand.html.twig
+++ b/views/brand.html.twig
@@ -23,14 +23,15 @@
 
                     <br>
                     <h5>Add a Store to your Brand</h5>
-                    <form action="/brand_add_store" method="post">
-                        <input type="hidden" name="_method" value="{{ brand.getId }}">
+                    <form action="/brand_add_store" method="post" class="form-inline">
+                        <input type="hidden" name="brand_id" value="{{ brand.getId }}">
+                        <label for="store_id">Select a current Brand</label>
                         <select name="store_id">
                             {% for store in all_stores %}
-                                <option value="{{ store.getId }}">{{ store.getName }}</option>
+                            <option value="{{ store.getId }}">{{ store.getName }}</option>
                             {% endfor %}
                         </select>
-                        <button type="submit" class="btn btn-success">Add!</button>
+                        <button class="btn btn-success" type="submit">Add!</button>
                     </form>
 
                     <h5>Delete Brand:</h5>
